pkg/lang/testdata/ub/config/invalid/state-encryption-missing-key-source.ub
state: { @backend: local, encryption: { env-var: 'X' } }
